# libzen

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
.workbuddy/memory/: 2026-03-20.md  2026-03-21.md  2026-03-22.md
cmake/: ZenConfig.cmake  ZenUtils.cmake
docs/: build.md  quick_start.md
docs/api/: README.md
docs/design/: architecture.md
docs/extend/: doxygen_guide.md
docs/plan/: development_plan.md  development_tasks.md  project_analysis.md
examples/: CMakeLists.txt  buffer_example.cpp  config_example.cpp  container_example.cpp  crypto_example.cpp  event_example.cpp  example_config.cpp  example_logging.cpp  example_tcp_server.cpp  example_thread_pool.cpp  example_vector.cpp  filesystem_example.cpp  graph_example.cpp  net_example.cpp  new_containers_example.cpp  serialize_example.cpp  string_example.cpp  system_example.cpp  timer_example.cpp
include/zen/: algorithms.h  audio.h  base.h  blockchain.h  buffer.h  crypto.h  database.h  error.h  event.h  filesystem.h  fmt.h  graphics.h  http.h  image.h  io.h  iterators.h  logging.h  math.h  memory.h  monitoring.h  net.h  pool.h  process.h  proto.h  rpc.h  serialize.h  storage.h  system.h  timer.h  utility.h  video.h
include/zen/containers/: deque.h  list.h  set.h  unordered_map.h  vector.h
scripts/: build.sh  check_compiler.py  check_env.py  compile_wsl.py  download_mingw.py  find_compiler.py  install.sh  list_drives.py  package.sh  test.sh  test_wsl.py  try_compile.py
src/algorithms/: CMakeLists.txt  algorithm_utils.h  comparators.h  find.h  graph.h  numeric.h  sort.h  string.h  transform.h
src/audio/: CMakeLists.txt  audio.cpp  audio.h
src/base/: CMakeLists.txt  base.cpp  compile_tools.h  macros.h  type_traits.h
src/blockchain/: CMakeLists.txt  blockchain.cpp  blockchain.h
src/buffer/: CMakeLists.txt  buffer.cpp  dynamic_buffer.cpp  dynamic_buffer.h  ring_buffer.cpp  ring_buffer.h
src/config/: config_base.h  ini_config.cpp  ini_config.h  json_config.h
src/containers/: CMakeLists.txt
src/containers/adapter/: priority_queue.h  queue.h  stack.h
src/containers/associative/: map.cpp  map.h  multimap.h  multiset.h  set.h  unordered_map.cpp  unordered_map.h  unordered_set.h
src/containers/sequential/: deque.h  list.cpp  list.h  string.cpp  string.h  vector.cpp  vector.h
src/crypto/: CMakeLists.txt  asymmetric.h  base64.h  crypto.cpp  hash.h  symmetric.h
src/database/: CMakeLists.txt  connection.h  connection_pool.h  database.cpp
src/error/: CMakeLists.txt  error.cpp  error_context.h  error_handler.h  exception_chain.h  system_error.h
src/event/: CMakeLists.txt  callback.h  event.cpp  event_handler.h  event_loop.cpp  event_loop.h  signal_event.h
src/filesystem/: directory.cpp  directory.h  path.cpp  path.h
src/fmt/: CMakeLists.txt  fmt.cpp  fmt_internal.h  format.h  print.h
src/graphics/: color.h  geometry.h  graphics.h  matrix.h  render.h  vector.h
src/http/: CMakeLists.txt  client.h  http.cpp  http.h  http_client.h  http_message.h  http_server.h  request.h  response.h  server.h  utils.h
src/image/: CMakeLists.txt  image.cpp  image.h
src/io/: CMakeLists.txt  file_io.h  io.cpp  io.h
src/iterators/: CMakeLists.txt  container_iterators.h  iterator_adaptors.h  iterator_base.h
src/logging/: log_formatter.h  log_level.h  log_sink.h  logger.h
src/math/: CMakeLists.txt  basic_math.h  fixed_point.h  math.cpp  numeric_stats.h  random.h
src/memory/: CMakeLists.txt  allocator.h  memory.cpp  shared_ptr.h  unique_ptr.h  weak_ptr.h
src/monitoring/: CMakeLists.txt  cpu.h  disk.h  memory.h  monitoring.cpp  monitoring.h  network.h  process.h
src/net/: CMakeLists.txt
src/net/core/: epoll.h  sockaddr.h  socket.cpp  socket.h
src/net/reactor/: reactor.h
src/net/tcp/: tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
src/pool/: connection_pool.h  object_pool.h  thread_pool.h
src/process/: CMakeLists.txt  daemon.h  process.cpp  process.h  process_utils.h  signal.h
src/proto/: CMakeLists.txt  codec.h  message.h  proto.cpp  proto_base.h  reflection.h
src/rpc/: CMakeLists.txt  client.h  error.h  protocol.h  rpc.cpp  rpc.h  rpc_client.h  rpc_server.h  serialization.h  server.h  service.h
src/serialize/: binary_serialize.h  json_serialize.h  serialize_base.h
src/storage/: CMakeLists.txt  storage.cpp  storage.h
src/system/: CMakeLists.txt  system.cpp  system_info.cpp  system_info.h  system_utils.h
src/threading/future/: future.cpp  future.h  promise.h
src/threading/pool/: thread_pool.cpp  thread_pool.h
src/threading/sync/: condition_variable.h  lock_guard.h  mutex.h  rwlock.h  spinlock.h  sync.cpp  unique_lock.h
src/threading/thread/: this_thread.h  thread.cpp  thread.h
src/timer/: timer.h  timer_manager.cpp  timer_manager.h  timer_queue.h
src/type/: CMakeLists.txt  concepts.h  ranges.h  type_convert.h  type_erasure.h
src/utility/: CMakeLists.txt  any.h  function.h  optional.h  pair.h  string_view.h  swap.h  tuple.h  variant.h
src/video/: CMakeLists.txt  video.cpp  video.h
tests/: CMakeLists.txt  test_alg  test_algorithms.cpp  test_base.cpp  test_base_memory_utility.cpp  test_base_memory_utility_iterators_containers.cpp  test_bmu  test_buffer.cpp  test_ca  test_config.cpp  test_containers_algorithms  test_containers_algorithms.cpp  test_containers_associative.cpp  test_core_verify  test_core_verify.cpp  test_crypto.cpp  test_error_threading  test_error_threading.cpp  test_event.cpp  test_filesystem.cpp  test_graph_string.cpp  test_lit  test_logging.cpp  test_logging_io_timer.cpp  test_math  test_math.cpp  test_memory.cpp  test_net.cpp  test_new_containers.cpp  test_pool.cpp  test_serialize.cpp  test_system.cpp  test_threading.cpp  test_timer.cpp  test_variant  test_variant.cpp  test_variant_simple
tests/test_containers/: test_unordered_map.cpp  test_vector.cpp
